// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WML semantic prettyPrint should indent nested elements 1`] = `
"<Asset key=(Test) fileName=\\"test\\">
    <Room key=(ABC)>
        <Name>Vortex</Name>
    </Room>
    <Room key=(VORTEX) global />
</Asset>"
`;

exports[`WML semantic prettyPrint should nest props on multiline expression 1`] = `
"<Asset key=(Test) fileName=\\"test\\">
    <Action key=(test) src={ singleLine() } />
    <Action
        key=(test)
        src={
            multiLine()
            expressions()
            if (true) {
                withPreservedIndents()
            }
        }
    />
</Asset>"
`;

exports[`WML semantic prettyPrint should nest props on very long tags 1`] = `
"<Character key=(Tess) fileName=\\"Tess\\" player=\\"testy\\" zone=\\"Library\\">
    <Name>Tess</Name>
    <Pronouns
        subject=\\"ridiculously long pronoun\\"
        object=\\"ridiculously long pronoun\\"
        possessive=\\"ridiculously long pronoun\\"
        adjective=\\"ridiculously long pronoun\\"
        reflexive=\\"ridiculously long pronoun\\"
    />
</Character>"
`;

exports[`WML semantic prettyPrint should remove previous whitespace 1`] = `
"<Asset key=(Test) fileName=\\"test\\">
    <Room key=(ABC)>
        <Name>Vortex</Name>
        <Description>
            Multi-line description
        </Description>
    </Room>
    <Room key=(VORTEX) global />
</Asset>"
`;
